# linux-device-driver

./: readme.md
completion/: Makefile
detect_inline_hook_input_event/: detect_inline_hook_input_event.c  detect_inline_hook_input_event.pro
get_kallsyms_lookup_name/: Makefile  get_kallsyms_lookup_name.pro  get_syms.c
get_key_by_input_event_inlinehook/: get_key_by_input_event_inlinehook.pro  get_key_by_input_event_inlinehook.pro.user.4ff7dc5  input_event_inlinehook.c  input_event_inlinehook.ko
get_no_export_function/: get_no_export_function.c  get_no_export_function.pro
get_signature_code/: CMakeLists.txt  Makefile  get-signature-code.c
get_sys_call_table/: CMakeLists.txt  Makefile  get_sct.c
get_time/: Makefile  get_time.pro  kern_time.c
hook_profile_task_exit/: Makefile  hook_exit.c  hook_profile_task_exit.pro
kernel_read_write_file/: Makefile  kern_rw_file.c  kernel_read_write_file.pro
kernel_thread/: compile_flags.txt  kernel_thread.c
kprobe_test/: CMakeLists.txt  Makefile  common.h  hookfunc.c  kprobe.c  kprobetest.c  lookupsym.c  recordkey.c  skthread.c
linux_syscall_hook/: linux_syscall_hook.c  linux_syscall_hook.pro  linux_syscall_hook.pro.user.4ff7dc5
list_process/: Makefile  list_process.c  list_process.pro
mips-inlinehook/: CMakeLists.txt  Makefile  common.h  hookfunc.c  mips-inlinehook.c  recordkey.c
module_cdev/: Makefile  module_cdev.c  module_cdev.pro
module_cdev/user/: cdev_test.c
module_kthread/: module_kthread.c  module_kthread.pro
module_template/: Makefile  module_template.c  module_template.pro
semaphore/: Makefile  compile_flags.txt
